--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 					  <button type="submit" class="btn btn-warning btn-lg">Login</button>
 					</form>					
 				</div><!-- /col-lg-4 -->
-
+				<div class="col-lg-4">
+					<img class="img-responsive" src="assets/img/ipad-hand.png" alt="SchachtenBoek">
+				</div><!-- /col-lg-4 -->
 				<div class="col-lg-4">
 					<h1>Registreer</h1>
 					<a href="registreer.html"><img src="assets/img/ser01.png" width="180" alt=""></a>
