--- a/html/failed_login.html
+++ b/html/failed_login.html
@@ -1,3 +1,7 @@
 <div role="alert" class="note alert alert-danger fade in" style="text-align:center;" id="alert-danger">
+	<button type="button" class="close" data-dismiss="alert">
+  	<span aria-hidden="true">&times;</span>
+  	<span class="sr-only">Close</span>
+	</button>
   	<h4>Foute ingave van gebruikersnaam en/of wachtwoord.</h4>
 </div>
