--- a/html/login.html
+++ b/html/login.html
@@ -1,10 +1,7 @@
 	<div id="headerwrap">
-		<div class="container">
+		<div class="container login">
 			<div class="row">
-				<div class="col-lg-2">
-					
-				</div><!-- /col-lg-4 -->
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-offset-2">
 					<h1>Login</h1>
 					<form class="form-inline" role="form" method="post" action="index.php">
 					  <div class="form-group">
