--- a/html/login.html
+++ b/html/login.html
@@ -8,11 +8,11 @@
 					    <input name="myUsername" type="text" class="form-control" id="userName" placeholder="Enter your name">
 						<input name="myPassword" type="password" class="form-control" id="userPassword" placeholder="Enter your password">
 					  </div>
-					  <button type="submit" name="Submit" value="Login" class="btn btn-warning btn-lg">Login</button>
+					  <button type="submit" name="Submit" value="Login" class="btn btn-warning btn-lg smsButton">Login</button>
 					</form>					
 				</div><!-- /col-lg-6 -->
 				<div class="col-lg-5">
-					<img class="img-responsive" src="assets/img/Schachtenboek.png" alt="SchachtenBoek">
+					<img class="img-responsive boek" src="assets/img/Schachtenboek.png" alt="SchachtenBoek">
 				</div><!-- /col-lg-4 -->
 
 				
