--- a/html/logout_nav.html
+++ b/html/logout_nav.html
@@ -7,7 +7,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="home.php"><b>SchachtenBoek</b></a>
+          <a class="navbar-brand" href="index.php"><img id="brandBook"
+             src="assets/img/Schachtenboek.png" alt="Boek"><b>Schachtenboek</b></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
