--- a/html/success_login.html
+++ b/html/success_login.html
@@ -3,5 +3,5 @@
   		<span aria-hidden="true">&times;</span>
   		<span class="sr-only">Close</span>
 	</button>
-  	<h4>U bent ingelogd.</h4>
+  	<h4 id="loginSuccess">U bent ingelogd.</h4>
 </div>
