--- a/html/footer.html
+++ b/html/footer.html
@@ -1,4 +1,6 @@
 	<div class="container">
-		<hr>
-		<p class="centered">Created by Ruben Cox - 2015</p>
+		<div class="row">
+			<hr>
+			<p class="centered">Created by Ruben Cox - 2015</p>
+		</div>
 	</div><!-- /footer -->
