--- a/html/login.html
+++ b/html/login.html
@@ -1,6 +1,6 @@
 	<div id="headerwrap">
 		<div class="container login">
-			<div class="row">
+			<div class="row centered">
 				<div class="col-lg-4 col-md-offset-2">
 					<h1>Login</h1>
 					<form class="form-inline" role="form" method="post" action="index.php">
