--- a/html/login.html
+++ b/html/login.html
@@ -3,10 +3,10 @@
 			<div class="row centered">
 				<div class="col-lg-4 col-md-offset-2">
 					<h1>Login</h1>
-					<form class="form-inline" role="form" method="post" action="index.php">
+					<form class="form-inline " role="form" method="post" action="index.php">
 					  <div class="form-group">
-					    <input name="myUsername" type="text" class="form-control" id="userName" placeholder="Enter your name">
-						<input name="myPassword" type="password" class="form-control" id="userPassword" placeholder="Enter your password">
+					    <input name="myUsername" type="text" class="form-control centered" id="userName" placeholder="Enter your name">
+						<input name="myPassword" type="password" class="form-control centered" id="userPassword" placeholder="Enter your password">
 					  </div>
 					  <button type="submit" name="Submit" value="Login" class="btn btn-warning btn-lg smsButton">Login</button>
 					</form>					
